--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -31,7 +31,7 @@
             <li class="nav__item"><a class="nav__link" href="#">Agents</a></li>
             <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
         </ul>
-    </nav>hi
+    </nav>
     <script>
         // Mobile nav toggle
         const nav = document.querySelector('.nav');
