--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -6,6 +6,7 @@
     <title>KH Realty — Find Homes in Cambodia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Affordable rentals and homes in Cambodia." />
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/components/nav.css">
     <link rel="stylesheet" href="/styles/scroller.css">
@@ -14,6 +15,8 @@
     <link rel="stylesheet" href="/styles/components/general.css">
 
     <link rel="icon" type="image/x-icon" href="/public/assets/images/company/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
     <script src="https://unpkg.com/slim-select@latest/dist/slimselect.js"></script>
     <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet">
@@ -32,6 +35,103 @@
             <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
         </ul>
     </nav>
+    <header class="hero container">
+        <div class="hero__card">
+            <h1 class="hero__title">About page</h1>
+        </div>
+        <div class="hero__card">
+            <div class="hero__card-text">
+                    <h2>
+                        Easiest way to find your dream home
+                    </h2>
+                <div class="hero__card-text2">
+                    <h4>
+                        Landing page
+                    </h4>
+                </div>
+                <div class="hero__card-text3">
+                    <p>
+                        The e-Commerce Website design template is easy to cutomize, <br> making it even easier for you to design your next website or <br> project, and speed up your design workflow
+                    </p>
+                    <div class="i-con">
+                        <i class="fa-solid fa-phone"><span>0976543401</span></i>
+                        <br>
+                        <i class="fa-solid fa-envelope"><span>kakadakheasaner@gmail.com</span></i>
+                        <br>
+                        <i class="fa-brands fa-telegram"><span>kakada yan</span></i>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="hero__card-pic">
+                <div class="card__pic-left">
+                    <img src="Screenshot from 2025-11-28 14-32-20.png" alt="">
+                </div>
+                <div class="card__pic-right">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script>
         // Mobile nav toggle
         const nav = document.querySelector('.nav');
